--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,6 @@
-{\rtf1\ansi\ansicpg950\cocoartf2822
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
-
-\f0\fs24 \cf0 flask==2.3.3\
-gunicorn==22.0.0\
-rembg[cpu]==2.0.59\
-pillow==10.4.0\
-requests==2.32.3\
-flask-cors==4.0.1}
+flask==2.3.3
+gunicorn==22.0.0
+rembg[cpu]==2.0.59
+pillow==10.4.0
+requests==2.32.3
+flask-cors==4.0.1
