--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,12 @@
-predeploy:
-  - pip install -r requirements.txt
-deploy:
-  start: python api.py
-env:
-  - key: PYTHON_VERSION
-    value: "3.11.9"  # 改成完整版本
-  - key: FLASK_ENV
-    value: "production"
+services:
+  - type: web
+    name: image-background-remover
+    env: python
+    plan: free
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn -w 4 -b 0.0.0.0:$PORT api:app
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.9
+      - key: PORT
+        value: 5000
